Improves markup and styles for editor

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,16 +1,4 @@
-* {
-  -webkit-margin-before: 0;
-  -webkit-margin-after: 0;
-  -webkit-margin-start: 0;
-  -webkit-margin-end: 0;
-  -webkit-padding-start: 0;
-}
+@import "bourbon/bourbon";
+@import "base/base";
 
-.colors {
-  li {
-    list-style-type: none;
-    height: 1em;
-    width: 1em;
-    display: inline-block;
-  }
-}
+@import "./editor";
