--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,10 @@
 @import "base/base";
 
 @import "./editor";
+@import "./preview";
+
+main {
+  @include display(flex);
+  @include flex-direction(column);
+  height: 97vh;
+}
